--- a/package.json
+++ b/package.json
@@ -9,13 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@react-icons/all-files": "^4.1.0",
+    "@urql/core": "^4.0.7",
     "autoprefixer": "10.4.14",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "firebase": "^9.21.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "next": "13.3.4",
+    "nextjs-toast": "^1.0.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.8.0",
+    "react-moment": "^1.1.3",
+    "react-nextjs-toast": "^1.2.5",
+    "react-toastify": "^9.1.2",
+    "reactfire": "^4.2.2",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "next-router-mock": "^0.9.3"
   }
 }
